Atatus Task Changes
Upated files for the review comments for Atatus task changes.

--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,7 @@ input:focus {
   margin: 5px;
 }
 
-.details:hover {
+.details:hover, .details:focus {
   background-color: #464960;
   color: white;
   border-style: solid;
