--- a/src/App.css
+++ b/src/App.css
@@ -101,18 +101,19 @@ input:focus {
 
 .Event {
   padding: 10px 10px 20px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   text-align: left;
   border: 1px solid #ccc;
   border-radius: 4px;
   position: relative;
   background-color: #464960;
   color: white;
+  min-height: 100%;
 }
 
 .EventList {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 10px;
 }
 
@@ -127,7 +128,6 @@ input:focus {
   border: none;
   background-color: #464960;
   color: white;
-  margin: 5px;
   border-style: solid;
   margin-left: auto;
   margin-right: 0;
